[package]
authors = ["hubble459 <geraldd459@gmail.com>"]
description = "Simple tokio-based Discord API in Rust"
edition = "2021"
name = "discord-rs"
readme = "README.md"
version = "0.1.0"
license = "MIT"
repository = "https://github.com/meep"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
